--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
   "description": "Clinician-Patient interface and data collector for research purposes",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=production node server",
+    "start": "node server",
     "server": "nodemon server",
     "dev": "npm run server"
   },
@@ -15,7 +15,6 @@
     "colors": "^1.4.0",
     "config": "^3.3.6",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.2",
     "express-rate-limit": "^5.2.6",
