--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,3 +56,8 @@ workflows:
             branches:
               only:
                 - master
+      - build:
+          filters:
+            branches:
+              only:
+                - master
