--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,19 +19,19 @@ jobs:
           post:
             - git fetch --all
 
-      - restore_cache:
-          keys:
-            # when lock file changes, use increasingly general patterns to restore cache
-            - yarn-packages-v1-{{ .Branch }}-{{ checksum "yarn.lock" }}
-            - yarn-packages-v1-{{ .Branch }}-
-            - yarn-packages-v1-
+      # - restore_cache:
+      #     keys:
+      #       # when lock file changes, use increasingly general patterns to restore cache
+      #       - yarn-packages-v1-{{ .Branch }}-{{ checksum "yarn.lock" }}
+      #       - yarn-packages-v1-{{ .Branch }}-
+      #       - yarn-packages-v1-
 
       - run: yarn install --freeze-lockfile
 
-      - save_cache:
-          paths:
-            - ~/.cache/yarn
-          key: yarn-packages-v1-{{ .Branch }}-{{ checksum "yarn.lock" }}
+      # - save_cache:
+      #     paths:
+      #       - ~/.cache/yarn
+      #     key: yarn-packages-v1-{{ .Branch }}-{{ checksum "yarn.lock" }}
 
       # run tests!
       - run: yarn ci:test
