--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,5 @@
 {
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "0.1.1",
@@ -9,7 +7,7 @@
     "version": {
       "conventionalCommits": true,
       "yes": true,
-      "message": "chore(release): publish %s [skip ci]"
+      "message": "chore(release): publish %s"
     }
   }
 }
