ci(ci): removed tags

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "lerna run dev --stream",
     "new-version": "lerna version --conventional-commits --yes",
     "diff": "lerna diff",
-    "ci:deploy": "lerna run ci:deploy --since $TAG"
+    "ci:deploy": "lerna run ci:deploy"
   },
   "version": "0.1.0",
   "author": "Dominic Hains",
