--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,7 @@ jobs:
       - run: git config --global user.name $GITHUB_USER
 
       - run: npm install --g lerna
+      - run: npm install netlify-cli -g
       - run: yarn new-version
 
       - run: git tag
