--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-dayjs": "^0.3.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.6.0",
     "react-jsonschema-form": "^1.8.1",
