--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.6.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
