--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,11 +9,14 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
+    "i18next": "^20.2.4",
+    "i18next-browser-languagedetector": "^6.1.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dayjs": "^0.3.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.6.0",
+    "react-i18next": "^11.8.15",
     "react-jsonschema-form": "^1.8.1",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.4",
