--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,12 +16,14 @@
     "react": "^17.0.2",
     "react-dayjs": "^0.3.2",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.0.9",
     "react-hook-form": "^7.6.0",
     "react-i18next": "^11.8.15",
     "react-jsonschema-form": "^1.8.1",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
+    "react-script-tag": "^1.1.2",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
