--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,7 +3,8 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "1.3.13",
+    "@date-io/date-fns": "1.3.11",
+    "date-fns": "2.11.1",
     "@ginkgo-bioworks/react-json-schema-form-builder": "^2.4.2",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
