--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "1.3.11",
-    "date-fns": "2.11.1",
     "@ginkgo-bioworks/react-json-schema-form-builder": "^2.4.2",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.30",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/pickers": "^3.3.10",
@@ -16,7 +16,8 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "dayjs": "^1.10.4",
+    "date-fns": "2.11.1",
+    "dayjs": "^1.10.5",
     "formik": "^2.2.8",
     "i18next": "^20.2.4",
     "i18next-browser-languagedetector": "^6.1.1",
