--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "date-fns": "2.11.1",
+    "date-fns-tz": "^1.1.4",
     "dayjs": "^1.10.5",
     "formik": "^2.2.8",
     "i18next": "^20.2.4",
