--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
     "date-fns": "2.11.1",
     "date-fns-tz": "^1.1.4",
     "dayjs": "^1.10.5",
