--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,6 +20,7 @@
     "date-fns": "2.11.1",
     "date-fns-tz": "^1.1.4",
     "dayjs": "^1.10.5",
+    "flat": "^5.0.2",
     "formik": "^2.2.8",
     "i18next": "^20.2.4",
     "i18next-browser-languagedetector": "^6.1.1",
