--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,6 +15,7 @@
     "colors": "^1.4.0",
     "config": "^3.3.6",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.2",
     "express-rate-limit": "^5.2.6",
@@ -25,6 +26,7 @@
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.0",
+    "request": "^2.88.2",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
