--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,6 +10,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/pickers": "^3.3.10",
+    "@react-pdf/renderer": "^2.0.15",
     "@rjsf/core": "^2.5.1",
     "@rjsf/material-ui": "^2.5.1",
     "@testing-library/jest-dom": "^5.12.0",
