--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -30,6 +30,7 @@
     "react": "^17.0.2",
     "react-dayjs": "^0.3.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.6.0",
     "react-i18next": "^11.8.15",
     "react-jsonschema-form": "^1.8.1",
