--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,13 +21,13 @@
     "express-rate-limit": "^5.2.6",
     "express-status-monitor": "^1.3.3",
     "express-validator": "^6.10.0",
+    "got": "^11.8.2",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.0",
-    "request": "^2.88.2",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
