--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -35,6 +35,7 @@
     "react-i18next": "^11.8.15",
     "react-jsonschema-form": "^1.8.1",
     "react-moment": "^1.1.1",
+    "react-multi-date-picker": "^2.10.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-script-tag": "^1.1.2",
