--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "chart.js": "^3.4.0",
     "date-fns": "2.11.1",
     "date-fns-tz": "^1.1.4",
     "dayjs": "^1.10.5",
@@ -28,6 +29,7 @@
     "i18next-http-backend": "^1.2.4",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dayjs": "^0.3.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
