--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,6 +11,7 @@
   "author": "Dominic Hains",
   "license": "ISC",
   "dependencies": {
+    "async-redis": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "config": "^3.3.6",
