--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,7 +11,6 @@
   "author": "Dominic Hains",
   "license": "ISC",
   "dependencies": {
-    "async-redis": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "config": "^3.3.6",
@@ -26,6 +25,7 @@
     "got": "^11.8.2",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
+    "ioredis": "^4.27.6",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.3",
