--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -49,7 +49,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm i && react-scripts build",
     "test": "react-scripts test",
     "dev": "npm start",
     "eject": "react-scripts eject",
