--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -45,6 +45,7 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "source-map-explorer": "^2.5.2",
     "yup": "^0.32.9"
   },
   "scripts": {
@@ -54,7 +55,8 @@
     "dev": "npm start",
     "eject": "react-scripts eject",
     "netlify:deploy": "netlify deploy --dir=./build -p -m \"$(git log -1 --pretty=%B)\"",
-    "ci:deploy": "npm run build && npm run netlify:deploy"
+    "ci:deploy": "npm run build && npm run netlify:deploy",
+    "analyze": "source-map-explorer 'build/static/js/*.js' --tsv"
   },
   "eslintConfig": {
     "extends": [
