--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.0",
+    "winston": "^3.3.3",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
