--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -57,7 +57,7 @@
     "eject": "react-scripts eject",
     "netlify:deploy": "netlify deploy --dir=./build -p -m \"$(git log -1 --pretty=%B)\"",
     "ci:deploy": "npm run build && npm run netlify:deploy",
-    "deploy:beta": "netlify deploy --prod"
+    "deploy:beta": "npm run build && netlify deploy --prod"
   },
   "eslintConfig": {
     "extends": [
