--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server",
     "server": "nodemon server",
-    "dev": "npm run server"
+    "dev": "npm run server",
+    "test": "mocha 'test/*.test.js' --exit"
   },
   "author": "Dominic Hains",
   "license": "ISC",
@@ -35,8 +36,13 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "concurrently": "^6.0.1",
     "faker": "^5.5.3",
-    "nodemon": "^2.0.7"
+    "mocha": "^9.1.1",
+    "mongodb-memory-server": "^7.4.1",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.6"
   }
 }
