test(all): set up

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "packages/*"
   ],
   "scripts": {
-    "ci:test": "echo passed",
+    "ci:test": "lerna run ci:test",
     "dev": "lerna run dev --stream",
     "new-version": "lerna version --conventional-commits --yes",
     "diff": "lerna diff",
