--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,6 +7,7 @@
     "start": "node server",
     "server": "nodemon server",
     "dev": "npm run server",
+    "docker": "docker-compose down && docker-compose up --build",
     "ci:test": "mocha 'test/*.test.js' --exit"
   },
   "author": "Dominic Hains",
@@ -17,6 +18,7 @@
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.2",
     "express-nobots": "^1.0.5",
