ci(circleci): dependencies

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,10 +24,10 @@ jobs:
             - yarn-packages-v1-{{ .Branch }}-
             - yarn-packages-v1-
 
-      - run: npm install --g lerna
+      # - run: npm install --g lerna
       - run: npm install netlify-cli -g
 
-      - run: yarn install --freeze-lockfile
+      - run: yarn install
 
       - save_cache:
           paths:
