--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -33,6 +33,7 @@
     "react-chartjs-2": "^3.0.3",
     "react-dayjs": "^0.3.2",
     "react-dom": "^17.0.2",
+    "react-faq-component": "^1.3.1",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.6.0",
     "react-i18next": "^11.8.15",
