--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -28,7 +28,6 @@
     "got": "^11.8.2",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
-    "ioredis": "^4.27.6",
     "json2mongo": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
@@ -47,5 +46,8 @@
     "mongodb-memory-server": "^7.4.1",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.6"
+  },
+  "engines": {
+    "node": ">=16.0.0 <17.0.0"
   }
 }
