--- a/.github/workflows/client.deploy.yml
+++ b/.github/workflows/client.deploy.yml
@@ -17,6 +17,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
       - name: Google Auth
         id: auth
         uses: 'google-github-actions/auth@v0'
